feat(tag): phase 23-01 - backend pagination for admin tag list
- TagService.getAllTags(page, size) returns Page<TagResponse>
  with article counts preserved
- AdminTagController accepts @RequestParam page, size (defaults 0, 20)
- Sort: createdAt DESC (matches ArticleService convention)
- Updated existing TagServiceTest to use the new paginated API
- Added new test verifying Pageable parameters are honored
- All 13 unit tests pass (2 expected Testcontainers errors
  unrelated to this change)